Clean up code